--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,14 @@
+# OS
 .DS_Store
+
+# Node modules
 node_modules
 
-# Log files
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Editor directories and files
+# Editors
 .vscode
 *.sw*
