--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Parcel
+.cache
+dist
+
 # OS
 .DS_Store
 
@@ -5,9 +9,7 @@
 node_modules
 
 # Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+*.log*
 
 # Editors
 .vscode
