--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "description": "The source for nicholashancox.com",
   "author": "Nicholas Hancox",
   "scripts": {
-    "build": "parcel build src/views/*.html --no-source-maps",
+    "build": "parcel build src/views/*.pug --no-source-maps",
     "clean": "node cleanDist.js",
     "clean:cache": "node cleanCache.js",
-    "dev": "parcel src/views/*.html",
+    "dev": "parcel src/views/*.pug",
     "lint:eslint": "eslint --fix",
     "lint:markdown": "markdownlint",
     "lint:prettier": "prettier --loglevel silent --write",
@@ -25,6 +25,7 @@
     "normalize.css": "^8.0.1"
   },
   "devDependencies": {
+    "@prettier/plugin-pug": "^1.4.4",
     "autoprefixer": "^9.7.6",
     "del": "^5.1.0",
     "eslint": "^6.8.0",
@@ -34,6 +35,7 @@
     "markdownlint-cli": "^0.22.0",
     "npm-run-all": "^4.1.5",
     "parcel-bundler": "^1.12.4",
-    "prettier": "^2.0.4"
+    "prettier": "^2.0.4",
+    "pug": "^3.0.0"
   }
 }
