Add Netlify CLI with dev command

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "clean": "node cleanDist.js",
     "clean:cache": "node cleanCache.js",
     "dev": "parcel src/views/*.pug",
+    "dev:netlify": "netlify dev",
     "lint:eslint": "eslint --fix",
     "lint:markdown": "markdownlint",
     "lint:prettier": "prettier --loglevel silent --write",
@@ -33,6 +34,7 @@
     "husky": "^4.2.3",
     "lint-staged": "^10.1.2",
     "markdownlint-cli": "^0.22.0",
+    "netlify-cli": "^2.54.0",
     "npm-run-all": "^4.1.5",
     "parcel-bundler": "^1.12.4",
     "prettier": "^2.0.4",
