--- a/netlify.toml
+++ b/netlify.toml
@@ -1,29 +1,21 @@
 [build]
-    base = "/"
-    publish = "dist/"
-    command = "yarn build"
+base = "/"
+command = "npm run build"
+publish = "dist/"
+
+[build.environment]
+NODE_VERSION = "12.18.3"
+
+[build.processing]
+skip_processing = true
 
 # Redirect Netlify subdomain to primary domain
 [[redirects]]
-    from = "https://nicholashancox.netlify.com/*"
-    to = "https://www.nicholashancox.com/:splat"
-    status = 301
-    force = true
+from = "https://nicholashancox.netlify.com/*"
+to = "https://www.nicholashancox.com/:splat"
+status = 301
+force = true
 
 [[redirects]]
-    from = "/"
-    to = "/home"
-
-[build.processing.html]
-    pretty_urls = true
-
-# All required processing is already finished or completed with the build
-# command
-[build.processing.css]
-    bundle = false
-    minify = false
-[build.processing.js]
-    bundle = false
-    minify = false
-[build.processing.images]
-    compress = false
+from = "/"
+to = "/home.html"
